[package]
name = "cuda-schedule"
version = "0.1.0"
edition = "2021"
description = "Task scheduling with conflict detection"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-schedule"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

